[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bron-sdk-python"
version = "0.2.1"
description = "Bron SDK for Python"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "jwcrypto>=1.5.6",
    "typing-extensions>=4.9.0",
    "pyflakes>=3.1.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
bron-keygen = "bron_sdk_python.utils.key_generator:main"

[tool.bron]
# When building/publishing, run scripts/update_version.py to sync version.py with pyproject version


